2007-11-08  Eric B. Weddingotn  <eweddington@cso.atmel.com>

	Add new device: ATtiny88.
	* configure.ac: Add new device.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iotn88.h: New file.
	* NEWS: Update new devices list.
	* include/avr/iotn48.h: Add lockbit information.

2007-11-05  Dmitry Xmelkov  <dmix@gmail.ru>

	Add new function round().
	* libm/fplib/round.S: New file.
	* libm/fplib/Files.am: Add new source round.S
	* include/math.h: Add round() function definition.
	* tests/simulate/math/round-01.c: New file.
	* tests/simulate/math/xxx-nan.c: Add round() function to list.
	
	* include/math.h: Add the 'const' attribute to hypot() function.

2007-11-04  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/dtostre.c: Optimize in space: 16..22 bytes, consided
	the extra function strcpy_P().

2007-11-02  Eric B. Weddington  <eweddington@cso.atmel.com>

	* include/avr/iom48p.h: New implementation. No common file included. 
	Add Fuse and lockbit definitions. Fix bugs.
	* include/avr/iom88p.h: Ditto.
	* include/avr/iom168p.h: Ditto.
	* include/avr/iom328p.h: Ditto.
	* include/avr/iomx8p.h: Remove file.
	* include/avr/Makefile (avr_HEADERS): Remove iomx8p.h from list.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21432: Incorrect timer interrupt handler names for ATtiny45
	* include/avr/iotnx5.h: Add TIMER0..._vect and TIMER1..._vect
	names in addition to the TIM0... and TIM1... names to match
	the recently changed datasheet.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21204: iotnx61.h PRR bits incorrect
	* include/avr/iotnx61.h: Use correct bit numbers for
	PRTIM0/PRTIM1.

2007-10-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21444: Undocument -minit-stack
	* doc/api/using-tools.dox: Remove references to -minit-stack,