@@ -446,6 +446,20 @@ double hypot (double x, double y) __ATTR_CONST__;
  */
 double round (double x) __ATTR_CONST__;
 
+/** \ingroup avr_math
+
+    The lround() function rounds \p x to the nearest integer, but rounds
+    halfway cases away from zero (instead of to the nearest even integer).
+    This function is similar to round() function, but it differs in type of
+    return value and in that an overflow is possible.
+
+    \return The rounded long integer value. If \p x is infinite or an
+    overflow was, this realization returns the \c LONG_MAX or \c LONG_MIN
+    value (according to \p x sign). If \p x is \c NaN, then \c LONG_MIN
+    (0x80000000) is returned.
+ */
+long lround (double x) __ATTR_CONST__;
+
 #ifdef __cplusplus
 }
 #endif
