@@ -83,6 +83,7 @@ libm_a_asm_sources = \
 	ldexp.S \
 	log10.S \
 	log.S \
+	lround.S \
 	modf.S \
 	mulsf3.S \
 	mulsf3x.S \
